Organized and produced notebook for CN profile visualization

--- a/notebooks/Visualize GMMs from CNprep.html
+++ b/notebooks/Visualize GMMs from CNprep.html
@@ -11760,7 +11760,8 @@ div#notebook {
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span><span class="kn">source</span><span class="p">(</span><span class="s">&quot;helperFunctions.R&quot;</span><span class="p">)</span>
+<div class=" highlight hl-r"><pre><span></span><span class="c1"># WARNING: If sources don&#39;t load, manually setwd() to src file location</span>
+<span class="kn">source</span><span class="p">(</span><span class="s">&quot;helperFunctions.R&quot;</span><span class="p">)</span>
 <span class="kn">source</span><span class="p">(</span><span class="s">&quot;visualizeGMMLibrary.R&quot;</span><span class="p">)</span>
 </pre></div>
 
